# Blog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt  uvicorn.out
app/: database.py  deps.py  main.py  models.py  security.py  storage.py  tables.py
app/routes/: auth.py  favorites.py  posts.py  profile.py  users.py
app/templates/: base.html  index.html  login.html  post_detail.html  post_form.html  profile.html  register.html
db/: schema.sql
docs/: erd.mmd
migrations/: env.py
migrations/versions/: 3221c9a81a30_initial_tables.py
tests/: conftest.py  test_auth.py  test_posts.py
