[project]
name = "simple-blog-api"
version = "0.1.0"
description = "A simple asynchronous REST API for a blog with HTML pages and JSON persistence."
authors = ["Your Name <you@example.com>"]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "jinja2==3.1.4",
  "orjson==3.10.7",
  "email-validator==2.2.0",
  "python-multipart==0.0.12",
  "sqlalchemy[asyncio]==2.0.36",
  "aiosqlite==0.20.0",
  "alembic==1.13.3",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "pre-commit==3.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
